--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,61 @@
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   min-height: 100vh;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+}
+
+.header {
+  font-size: xx-large;
+  padding: 15px;
+  font-weight: bold;
+  background-color: aliceblue;
+  width: 100vw;
+  text-align: center;
+  margin: 0;
+  padding: 5px 0px;
+}
+
+.options {
+  display: flex;
+  justify-content: center;
+}
+.squares-num {
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 5px;
+}
+
+.main-container {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  width: 40%;
+  justify-content: space-around;
+}
+
+.grid {
+  width: 80%;
+  margin: 20px;
+  aspect-ratio: 1 / 1;
+  border: 1px solid black;
+}
+
+.footer {
+  font-size: large;
+  font-weight: bold;
+  background-color: aliceblue;
+  width: 100vw;
+  text-align: center;
+  margin: 0;
+  padding: 5px 0px;
+}
+
+.footer p {
+  margin: 0;
 }
