--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@ body {
   text-align: center;
   margin: 0;
   padding: 5px 0px;
+  border-bottom: 1px solid black;
 }
 
 .options {
@@ -60,6 +61,7 @@ body {
   text-align: center;
   margin: 0;
   padding: 5px 0px;
+  border-top: 1px solid black;
 }
 
 .footer p {
