replace id with class in `cell` div and `line-div`
Replace id with class in `cell` div and `line-div`  and their
selectors in CSS code

--- a/style/style.css
+++ b/style/style.css
@@ -68,12 +68,12 @@ body {
   margin: 0;
 }
 
-#line-div {
+.line-div {
   display: flex;
   height: 100%;
 }
 
-#cell {
+.cell {
   background-color: white;
   width: 100%;
 }
